crates/macros/tests/ui/fail/type_mismatch.rs
fn main() {
    let _ = fittings_macros::ui_helper("not a number");
}
