crates/macros/tests/ui/fail/type_mismatch.stderr
error[E0308]: mismatched types
 --> tests/ui/fail/type_mismatch.rs:2:40
  |
2 |     let _ = fittings_macros::ui_helper("not a number");
  |             -------------------------- ^^^^^^^^^^^^^^ expected `u32`, found `&str`
  |             |
  |             arguments to this function are incorrect
  |
note: function defined here
 --> src/lib.rs
  |
  | pub fn ui_helper(value: u32) -> u32 {
  |        ^^^^^^^^^
